# go2-ros2-inspection

./: .clang-format  .gitignore  README.md  run_mcp_sim.sh
champ_bringup/: package.xml
champ_bringup/launch/: bringup.launch.py
go2_bringup/: README.md  package.xml
go2_bringup/config/: nav2_params_rtab.yaml  pointcloud_to_laserscan.yaml  ros_gz_bridge_champ.yaml
go2_bringup/launch/: go2_champ.launch.py  inspection_nav.launch.py  mission.launch.py  mission_control.launch.py  nav2.launch.py  octomap.launch.py  rtabmap_slam.launch.py  sim.launch.py  sim_mapping.launch.py
go2_bringup/rviz/: go2_full.rviz
go2_config/: CMakeLists.txt  README.md  package.xml
go2_config/include/: gait_config.h  hardware_config.h  quadruped_description.h
go2_description/: CMakeLists.txt  README.md  package.xml
go2_description/xacro/: gazebo_gz.xacro  robot_gz.xacro
go2_exploration/: README.md  package.xml
go2_exploration/src/: frontier_explorer.cpp  self_filter.cpp
go2_inspection/: README.md  package.xml  setup.py
go2_inspection/go2_inspection/: detect_utils.py  inspection_mission.py  mcp_mission_server.py  mission_control_server.py  report_utils.py  zone_inspector.py
go2_inspection_interfaces/: README.md  package.xml
go2_inspection_interfaces/srv/: ZoneTask.srv
go2_perception/: package.xml
go2_worlds/: CMakeLists.txt  README.md  package.xml
go2_worlds/scripts/: gen_gauge_world.py  gen_gauges.py  gen_inspection_arena.py  gen_inspection_world.py  gen_map.py  gen_maze_world.py
go2_worlds/worlds/: maze.sdf
go2_zones/: README.md  package.xml  setup.py
go2_zones/go2_zones/: zone_segmenter.py
media/: README.md
