<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_inspection</name>
  <version>0.1.0</version>
  <description>Autonomous object inspection for the Go2: zone segmentation, zone_inspector (viewpoint +
  360-degree spin live YOLOE detection with depth->map localization, dedup, crops, per-zone + facility
  reports/maps), a mission orchestrator, the ROS2 service layer, and the MCP mission server.</description>
  <maintainer email="gupta.adyansh@gmail.com">Adyansh Gupta</maintainer>
  <author email="gupta.adyansh@gmail.com">Adyansh Gupta</author>
  <license>Apache-2.0</license>

  <!-- ROS -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>go2_inspection_interfaces</exec_depend>
  <exec_depend>go2_zones</exec_depend>

  <!-- Python system packages (apt-installable via rosdep) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <!-- Python pip-only packages — not in rosdep; install manually:
       pip install fastmcp ultralytics    (ultralytics + the CLIP text backend for YOLOE open-vocab)
       These are declared for documentation; rosdep -r will skip them. -->
  <exec_depend>python3-fastmcp</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
